3.4.0 (unreleased)
------------------

- BC-147: Default empty WS view should list on due date
- Issue-2103: WS Templates not offered for selection
- Instrument selection for creating WSs does not work
- Issue-2215: Added extra param portal_type on the function generateUniqueId so that it's not used for objects only
- Issue-2230: IDServer fails to rename Samples with a non-id-compliant SampleType
- 2215: Added extra param portal_type on the function generateUniqueId so that it's not used for objects only
- Issue-2183: Don't recalculate prices when option "Include and display pricing information" in Bika Setup Accounting is not selected
- Sampler and Sampling Date Columns are not validated when they are not displayed
- Issue-2162: Added renameAfterCreation to partition creation in ARImport
- Laboratory Supervisor field on the Laboratory(Bika Setup - Laboratory Information)
- Laboratory License ID field on the Laboratory(Bika Setup - Laboratory Information)
- Add instrument Agilent-Masshunter
- Issue-2145: Client Departments/Types structure not preserved on reinstall
- Issue-2143: Make Bika API work with DX types properly
- LIMS-2449: Thermo Qtegra results importer
- Lab Supervisor field on the Laboratory(Bika Setup - Laboratory Information)
- BC-99: Added Print Stickers button to AR listings
- Issue-2152: Fixed AR sticker autoprint to work regardless of AR number format


3.3.0 (unreleased)
------------------

- Issue-2245: AR View: Asyncronous update of proxy fields fails
- Issue-2218: Cache Key does not invalidate if proxied Sample values of ARs change
- Issue-2204: Notification Emails on AR retract
- Issue-2173: Publishing multiple ARs fails
- Issue-2132: Reorderable Attachments for Reports
- Issue-2129: Migrate Attachments to blobs
- Issue-2098: Inline rendered Attachments not in final PDF
- LIMS-2596:  AR and Sample view fields that need to stay editable

**Other Changes**

- Bika LIMS JSON API v2


3.2.1rc3 (unreleased)
3.2.1rc3 (2017-10-02)